# Curvature-Unified-Muon

./: .gitignore  CLAUDE.md  CUM_BUILD_GUIDE(DEPRICATED).md  EXPERIMENT_LOG.md  PAPER.md  README.md  RESEARCH_WRITEUP.md  RESEARCH_WRITEUP_V2.md  colab_benchmark.ipynb  colab_benchmark_v10.ipynb  colab_benchmark_v11.ipynb  colab_benchmark_v2.ipynb  colab_benchmark_v3.ipynb  colab_benchmark_v4.ipynb  colab_benchmark_v5.ipynb  colab_benchmark_v6.ipynb  colab_benchmark_v7.ipynb  colab_benchmark_v8.ipynb  colab_benchmark_v9.ipynb  deep_research_prompt.md  deep_research_prompt_v2.md  deep_research_prompt_v3.md  deep_research_prompt_v4.md  deep_research_results.md  deep_research_results_v2.md  deep_research_results_v3.md  deep_research_results_v4.md  pyproject.toml
analysis/: PROOFS.md  THEORY_RESULTS.md  polynomial_theory.py
cum/: __init__.py  cum.py  cum_11v1.py  cum_11v2.py  cum_11v3.py  cum_12v1.py  cum_12v2.py  cum_12v3.py  cum_13v1.py  cum_14v1.py  cum_2v1.py  cum_2v2.py  cum_3v1.py  cum_3v2.py  cum_3v3.py  cum_4v1.py  cum_4v2.py  cum_4v3.py  cum_5v1.py  cum_5v2.py  cum_5v3.py  cum_5v4.py  cum_5v5.py  cum_5v6.py  cum_5v7.py  cum_6v1.py  cum_6v2.py  cum_6v3.py  cum_6v4.py  cum_6v5.py  cum_6v6.py  cum_6v7.py  cum_6v8.py  cum_6v9.py  cum_7v1.py  cum_8v1.py  cum_9v1.py  cum_v10.py  cum_v11.py  cum_v12.py  (+14 more)
experiments/: 10v.md  10v_b.md  10v_c.md  10v_d.md  10v_e.md  11v.md  12v.md  13v.md  14v.md  15v.md  16v.md  2v1.md  2v2.md  3v1.md  3v2.md  3v3.md  5v1.md  5v2.md  5v3.md  5v4.md  5v6.md  6v.md  7v.md  8v.md  9v.md  SUMMARY.md  v1.md  v10.md  v11.md  v12.md  v2.md  v3.md  (+6 more)
(+52 files in other folders)
